# japanese_vocab_fetcher

./: .github-build.sh  .gitignore  CONTRIBUTING.md  README.md  asset-manifest.json  index.html  main.py
.github/workflows/: .github-build.sh  node-tests.yml  on-build.yml  on-push.yml  python-app.yml  python-docker.yml  python-on-build.yml  python-on-push.yml  python-tests.yml
api/: .pylintrc  Dockerfile  Dockerfile.ec2  Dockerfile.lambda  build_and_push_lambda.sh  pyproject.toml
api/api/: app.py  coordinator.py  flask_utils.py  main.py  utils.py
api/api/custom_types/: __init__.py  alternative_string_types.py  exception_types.py  forvo_api_types.py  helpers.py  jisho_api_types.py  response_types.py  wanikani_api_types.py
api/api/modules/: forvo.py  japanesepod.py  jisho.py  ojad.py  suzuki.py  tangorin.py  wadoku.py  wanikani.py
api/api/stubs/: bs4.pyi  dotenv.pyi
api/custom_types/: exception_types.py
api/deployment/: requirements_mypy.txt
api/modules/: japanesepod.py  tangorin.py  wadoku.py
api/testing/: _test_server.py  dict_typing.py  dicts.py  example_script.py  jisho_api_responses.py  test_coordinator.py  test_flask_utils.py  test_forvo.py  test_japanesepod.py  test_jisho.py  test_ojad.py  test_suzuki.py  test_tangorin.py  test_utils.py  test_wadoku.py  test_wanikani.py  wanikani_api_responses.py
api/testing/html_files/: japanesepod_badinput.html  japanesepod_comeback.html  japanesepod_megane.html  japanesepod_naru.html  japanesepod_shizuka.html  japanesepod_usagi.html  ojad_BLANK.html  ojad_badinput_00.html  ojad_comeback_00.html  ojad_kotoba_00.html  ojad_megane_00.html  ojad_naru_00.html  ojad_shizuka_00.html  ojad_taberu_gakusei_00.html  ojad_usagi_iku_kago_00.html  ojad_usagi_iku_kago_01.html  suzuki_badinput.html  suzuki_comeback.html  suzuki_kotoba.html  suzuki_megane.html  suzuki_shizuka.html  suzuki_taberu_gakusei.html  suzuki_usagi_iku_kago.html  tangorin_comeback.html  tangorin_gakusei.html  tangorin_kotoba.html  tangorin_shizuka.html  tangorin_usagi.html  wadoku_badinput.html  wadoku_shizuka.html  wadoku_usagi_iku_kago.html
client/: .env.production  package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.test.tsx  App.tsx
python-backend/: main.py
python_backend/: .pylintrc  Dockerfile  app.py  cert.pem  coordinator.py  custom_types.py  key.pem  mypy.ini  utils.py  utils.pyi
python_backend/custom_types/: exception_types.py  forvo_api_types.py  jisho_api_types.py  response_types.py  tatoeba_api_types.py  wanikani_api_types.py
python_backend/deployment/: requirements.txt  trigger_docker_build.sh
python_backend/modules/: __init__.py  __init__.pyi  forvo.py  japanesepod.py  jisho.py  ojad.py  suzuki.py  tangorin.py  tatoeba.py  wadoku.py  wadoku_plan.txt  wanikani.py
python_backend/stubs/: bs4.element.pyi  bs4.pyi  dotenv.pyi
python_backend/testing/: _test_server.py  dict_typing.py  dicts.py  example_script.py  jisho_api_responses.py  tatoeba_api_responses.py  test_coordinator.py  test_forvo.py  test_japanesepod.py  test_jisho.py  test_ojad.py  test_server.py  test_suzuki.py  test_tangorin.py  test_tatoeba.py  test_utils.py  test_wadoku.py  test_wanikani.py  (+1 more)
react-interface/: .eslintrc.json  package.json
(+283 files in other folders)
