[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["benleong0 <benleong0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = { version = "^3.0.2", optional = true }
flask-cors = { version = "^4.0.0", optional = true }
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.356"
ruff = "^0.3.4"
pytest = "^8.1.1"

[tool.poetry.extras]
server = ["Flask", "flask-cors"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 100
include_trailing_comma = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["B023"]

[tool.ruff.lint.per-file-ignores]
"testing/dicts.py" = ["E501"]
"testing/example_script.py" = ["E501"]
"testing/jisho_api_responses.py" = ["E501"]
"testing/wanikani_api_responses.py" = ["E501"]
