[project]
name = "api"
version = "0.1.0"
description = ""
authors = [{ name = "benleong0", email = "benleong0@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "beautifulsoup4>=4.12.3,<5",
    "requests>=2.31.0,<3",
    "python-dotenv>=1.0.1,<2",
]

[project.optional-dependencies]
server = ["Flask>=3.0.2,<4", "flask-cors>=4.0.0,<5"]

[dependency-groups]
dev = ["pyright>=1.1.356,<2", "ruff>=0.3.4,<0.4", "pytest>=8.1.1,<9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.isort]
line_length = 100
include_trailing_comma = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["B023"]

[tool.ruff.lint.per-file-ignores]
"testing/dicts.py" = ["E501"]
"testing/example_script.py" = ["E501"]
"testing/jisho_api_responses.py" = ["E501"]
"testing/wanikani_api_responses.py" = ["E501"]
